--- a/app/src/main/res/layout/activity_standby.xml
+++ b/app/src/main/res/layout/activity_standby.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:format12Hour="h:mm"
         android:format24Hour="H:mm"
-        android:textAppearance="@style/TextAppearance.ZenLauncher.Clock.Large"
+        android:textAppearance="@style/TextAppearance.MindfulLauncher.Clock.Large"
         android:textColor="@color/text_primary"
         app:layout_constraintBottom_toTopOf="@+id/dateTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:format12Hour="EEEE, d 'de' MMMM"
         android:format24Hour="EEEE, d 'de' MMMM"
-        android:textAppearance="@style/TextAppearance.ZenLauncher.Date"
+        android:textAppearance="@style/TextAppearance.MindfulLauncher.Date"
         android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toTopOf="@+id/standbyMessage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Modo Standby - Toque para retornar"
-        android:textAppearance="@style/TextAppearance.ZenLauncher.Body1"
+        android:textAppearance="@style/TextAppearance.MindfulLauncher.Body1"
         android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
