--- a/app/src/main/res/layout/item_app.xml
+++ b/app/src/main/res/layout/item_app.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textAppearance="@style/TextAppearance.ZenLauncher.Body1"
+        android:textAppearance="@style/TextAppearance.MindfulLauncher.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/appIcon"
         app:layout_constraintEnd_toStartOf="@+id/favoriteIcon"
         app:layout_constraintStart_toEndOf="@+id/appIcon"
